--- a/.golangci.yml
+++ b/.golangci.yml
@@ -16,6 +16,7 @@ linters-settings:
           - "!$test"
         allow:
           - $gostd
+          - "golang.org/x/example"
       Test:
         files:
           - $test
