--- a/.golangci.yml
+++ b/.golangci.yml
@@ -23,6 +23,7 @@ linters-settings:
         allow:
           - $gostd
           - github.com/stretchr/testify
+          - go.uber.org/goleak
 issues:
   exclude-rules:
     - path: _test\.go
