HW07 is completed

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -17,6 +17,7 @@ linters-settings:
         allow:
           - $gostd
           - "golang.org/x/example"
+          - "github.com/cheggaaa/pb/v3"
       Test:
         files:
           - $test
